@@ -1,8 +1,16 @@
 EXTRA_DIST = \
+	inputfd.awk \
+	inputfd.ok \
 	kill.awk \
 	kill.ok \
-	testselect.awk \
-	testselect.ok
+	nonblock.awk \
+	nonblock.ok \
+	outputfd.awk \
+	outputfd.ok \
+	select.awk \
+	select.ok \
+	signal.awk \
+	signal.ok
 
 # Get rid of core files when cleaning and generated .ok file
 CLEANFILES = _* *_.png core core.* junk out1 out2 out3 test1 test2 seq *~
@@ -12,18 +20,26 @@ include test.makefile
 # Message stuff is to make it a little easier to follow.
 # Make the pass-fail last and dependent on others to avoid
 # spurious errors if `make -j' in effect.
-check:	select-msg-start select select-msg-end
+check:	test-msg-start mytests test-msg-end
 	@$(MAKE) pass-fail || { $(MAKE) diffout; exit 1; }
 
-select: testselect kill
+LINTTESTS = kill inputfd nonblock outputfd
+REGTESTS = select signal
 
-select-msg-start:
+mytests: $(LINTTESTS) $(REGTESTS)
+
+test-msg-start:
 	@echo "======== Starting select tests ========"
 
-select-msg-end:
+test-msg-end:
 	@echo "======== Done with select tests ========"
 
-testselect kill::
+$(LINTTESTS):
+	@echo $@
+	@$(AWK) --lint -l select -f $(srcdir)/$@.awk >_$@ 2>&1 || echo EXIT CODE: $$? >>_$@
+	@-$(CMP) $(srcdir)/$@.ok _$@ && rm -f _$@
+
+$(REGTESTS):
 	@echo $@
 	@$(AWK) -l select -f $(srcdir)/$@.awk >_$@ 2>&1 || echo EXIT CODE: $$? >>_$@
 	@-$(CMP) $(srcdir)/$@.ok _$@ && rm -f _$@
