@@ -1,0 +1,16 @@
+gawk: ./outputfd.awk:2: warning: output_fd: called with too few arguments
+0
+1
+hello
+gawk: ./outputfd.awk:8: warning: output_fd: called with too few arguments
+0
+gawk: ./outputfd.awk:9: warning: cannot open unrecognized file type `<>' for `echo hello; echo goodbye'
+gawk: ./outputfd.awk:9: warning: output_fd: get_file(`echo hello; echo goodbye', `<>') failed to return an output descriptor
+0
+0
+gawk: ./outputfd.awk:13: warning: close: `wc -l' is not an open file, pipe or co-process
+-1
+see how output_fd actually launches the command
+rc 1
+0
+0
