@@ -1,3 +1,0 @@
-BEGIN {
-	print select(readfds, writefds, exceptfds, 0)
-}
